# HW13_1

./: main.py  pyproject.toml  sql_app12.db
docs/source/: conf.py
migrations/versions/: 1a714c0e5a21_init.py  bab9c42e8062_init.py
src/: schemas.py
src/database/: auth.py  db.py  models.py
src/repository/: contacts.py  emails.py  users.py
src/routes/: auth.py  contacts.py  emails.py
src/services/: auth.py  email.py
tests/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_emails.py
