[tool.poetry]
name = "how13-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libgravatar = "^1.0.4"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.40.0"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
